# RevDeck

./: Cargo.toml  README.md  RevDeck.txt
.workflow/.csv-wave/20260513-brainstorm-next-power-tui/: context.md  discoveries.ndjson  results.csv  tasks.csv
.workflow/.csv-wave/20260513-brainstorm-revdeck-plugin-sdk-versatile-reverse/: context.md  discoveries.ndjson  results.csv  wave-1-results.csv  wave-2-results.csv  wave-3-results.csv
.workflow/.csv-wave/20260513-brainstorm-revdeck-tui-product-iteration-based-on-r/: context.md  discoveries.ndjson  tasks.csv
.workflow/.csv-wave/20260513-execute-m1-sdk-contract-preview/: context.md  discoveries.ndjson  results.csv  tasks.csv
.workflow/.csv-wave/20260513-execute-m2a-m2b-power-navigation-adapter-commit/: context.md  discoveries.ndjson  results.csv  tasks.csv
.workflow/.csv-wave/20260513-execute-revdeck-v01-binary-triage/: context.md  discoveries.ndjson  results.csv  wave-1-results.csv  wave-1.csv  wave-2-results.csv  wave-2.csv  wave-3-results.csv  wave-3.csv  wave-4-results.csv  wave-4.csv
.workflow/.csv-wave/20260513-plan-m1-sdk-contract-preview/: E1-architecture.md  E2-implementation.md  E3-integration.md  E4-risk.md  context.md  discoveries.ndjson  results.csv  wave-1-results.csv
.workflow/.csv-wave/20260513-plan-m2a-m2b-power-navigation-adapter-commit/: context.md
.workflow/.csv-wave/20260513-plan-revdeck-v01-binary-triage/: E1-analysis.md  E2-analysis.md  E3-analysis.md  E4-analysis.md  context.md  discoveries.ndjson  tasks.csv  wave-1-results.csv  wave-1.csv  wave-2-results.csv  wave-2.csv
.workflow/.csv-wave/20260514-brainstorm-native-r2-class-revdeck/: context.md  feature-index.json
.workflow/.csv-wave/20260514-design-mature-re-workbench-parity/: context.md
.workflow/.csv-wave/20260514-execute-native-adc-sbb-register-memory/: context.md
.workflow/.csv-wave/20260514-execute-native-add-sub-r32-immediates/: context.md
.workflow/.csv-wave/20260514-execute-native-argument-register-hints/: context.md
.workflow/.csv-wave/20260514-execute-native-bitwise-r32-immediates/: context.md
.workflow/.csv-wave/20260514-execute-native-branch-condition-summaries/: context.md
.workflow/.csv-wave/20260514-execute-native-branch-known-outcomes/: context.md
.workflow/.csv-wave/20260514-execute-native-call-ret-leave-stack-effects/: context.md
.workflow/.csv-wave/20260514-execute-native-call-target-functions/: context.md
.workflow/.csv-wave/20260514-execute-native-cfg-edge-outcomes/: context.md
.workflow/.csv-wave/20260514-execute-native-cfg-foundation/: context.md
.workflow/.csv-wave/20260514-execute-native-cmovcc-r32-registers/: context.md
.workflow/.csv-wave/20260514-execute-native-cmovcc-rm32-memory/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-r32-immediates/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-r32-registers/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-test-immediates/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-test-memory-immediate/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-test-memory-source/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-test-operands/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-test-rm8-immediate/: context.md
.workflow/.csv-wave/20260514-execute-native-cmp-test-rm8-register-memory/: context.md
.workflow/.csv-wave/20260514-execute-native-condition-source-xrefs/: context.md
.workflow/.csv-wave/20260514-execute-native-constant-sources/: context.md
.workflow/.csv-wave/20260514-execute-native-constant-writes/: context.md
.workflow/.csv-wave/20260514-execute-native-epilogue-foundation/: context.md
.workflow/.csv-wave/20260514-execute-native-ff-indirect-control-flow/: context.md
.workflow/.csv-wave/20260514-execute-native-function-extents/: context.md
.workflow/.csv-wave/20260514-execute-native-group1-adc-sbb-immediate/: context.md
.workflow/.csv-wave/20260514-execute-native-group1-memory-immediate/: context.md
.workflow/.csv-wave/20260514-execute-native-group1-rm8-immediate/: context.md
.workflow/.maestro/maestro-20260513-005535/: context.md  (+5 more)
crates/revdeck-cli/: Cargo.toml
crates/revdeck-cli/src/: main.rs
crates/revdeck-cli/tests/: analyze_profile.rs
crates/revdeck-core/: Cargo.toml
crates/revdeck-db/: Cargo.toml
crates/revdeck-db/migrations/: 0001_foundation.sql  0002_binary_index.sql  0003_function_radar.sql  0004_analysis_memory_findings.sql  0005_plugin_runs.sql  0006_plugin_contributions.sql  0007_native_cfg.sql  0008_analysis_jobs.sql  0009_trace_lab.sql  0010_firmware_lab.sql  0011_crash_lab.sql  0012_protocol_lab.sql  0013_project_case_notes.sql
crates/revdeck-db/src/: lib.rs  migrations.rs  project.rs  query.rs  repo.rs
crates/revdeck-index/: Cargo.toml
crates/revdeck-index/src/: lib.rs  native_decode.rs
crates/revdeck-plugin-host/: Cargo.toml
crates/revdeck-plugin-host/src/: lib.rs
crates/revdeck-plugin-sdk/: Cargo.toml
crates/revdeck-tui/: Cargo.toml
crates/revdeck-tui/src/: lib.rs
fixtures/: manifest.json
fixtures/binaries/: corrupt_elf  sensitive_imports_elf  stripped_elf
fixtures/crashes/: asan_uaf.json  asan_uaf_repeat.json  panic.txt
fixtures/protocol/: login_handshake.json
fixtures/traces/: malformed.jsonl  minimal.jsonl
tests/commands/: Cargo.toml
tests/commands/tests/: command_pipeline.rs
tests/crash/: Cargo.toml
tests/diff/: Cargo.toml
tests/export/: Cargo.toml
tests/firmware/: Cargo.toml
tests/firmware/tests/: firmware_lab.rs
tests/foundation/: Cargo.toml
tests/foundation/src/: lib.rs
tests/foundation/tests/: foundation.rs
tests/memory/: Cargo.toml
tests/memory/src/: lib.rs
tests/memory/tests/: memory_annotations.rs
tests/navigation/: Cargo.toml
tests/plugin-sdk/: Cargo.toml
tests/plugin-sdk/src/: lib.rs
tests/plugin-sdk/tests/: plugin_sdk.rs
tests/protocol/: Cargo.toml
tests/radar/: Cargo.toml
tests/trace/: Cargo.toml
tests/trace/tests/: trace_lab.rs
tests/tui/: Cargo.toml
tests/tui/src/: lib.rs
tests/tui/tests/: tui_workspace.rs
(+222 files in other folders)
