[workspace]
members = [
    "crates/revdeck-cli",
    "crates/revdeck-core",
    "crates/revdeck-db",
    "crates/revdeck-index",
    "crates/revdeck-plugin-host",
    "crates/revdeck-plugin-sdk",
    "crates/revdeck-tui",
    "tests/commands",
    "tests/diff",
    "tests/foundation",
    "tests/export",
    "tests/memory",
    "tests/navigation",
    "tests/plugin-sdk",
    "tests/radar",
    "tests/firmware",
    "tests/trace",
    "tests/crash",
    "tests/protocol",
    "tests/tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/revdeck"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.14"
clap = { version = "4.5.4", features = ["derive"] }
predicates = "3.1.0"
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
semver = "1.0.23"
sha2 = "0.10.8"
tempfile = "3.10.1"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8.19"
object = { version = "0.36.0", features = ["read_core", "elf", "pe"] }
ratatui = "0.27.0"
crossterm = "0.27.0"
