[package]
name = "revdeck-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "revdeck"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
revdeck-core = { path = "../revdeck-core" }
revdeck-db = { path = "../revdeck-db" }
revdeck-index = { path = "../revdeck-index" }
revdeck-plugin-host = { path = "../revdeck-plugin-host" }
revdeck-tui = { path = "../revdeck-tui" }
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
