[package]
name = "revdeck-plugin-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
revdeck-core = { path = "../revdeck-core" }
revdeck-db = { path = "../revdeck-db" }
revdeck-plugin-sdk = { path = "../revdeck-plugin-sdk" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
