[package]
name = "revdeck-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
revdeck-core = { path = "../revdeck-core" }
revdeck-db = { path = "../revdeck-db" }
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true
