[package]
name = "revdeck-foundation-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
revdeck-core = { path = "../../crates/revdeck-core" }
revdeck-db = { path = "../../crates/revdeck-db" }
revdeck-index = { path = "../../crates/revdeck-index" }
tempfile.workspace = true
time.workspace = true
