[package]
name = "revdeck-trace-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
assert_cmd.workspace = true
revdeck-core = { path = "../../crates/revdeck-core" }
revdeck-db = { path = "../../crates/revdeck-db" }
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
